ANode/test/data/SMSHOME2/bad/bad9.ecf

sleep %SLEEPTIME # test for uneven number for microcharacter's with comments
